--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.17)
 
 project(helloCMake)
 
@@ -15,7 +15,7 @@ target_include_directories(${EXECUTABLE} PUBLIC lib/fmt/include)
 target_link_libraries(${EXECUTABLE} fmt)
 
 # libFort
-#set(FORT_ENABLE_TESTING OFF CACHE INTERNAL "")
+set(FORT_ENABLE_TESTING OFF CACHE INTERNAL "")
 add_subdirectory(lib/libfort)
 target_include_directories(${EXECUTABLE} PUBLIC lib/libfort/lib)
 target_link_libraries(${EXECUTABLE} fort)
@@ -25,6 +25,7 @@ configure_file(tttestLC.elf tttestLC.elf COPYONLY)
 configure_file(tttest32.elf tttest32.elf COPYONLY)
 configure_file(tttest36.elf tttest36.elf COPYONLY)
 configure_file(tttest40.elf tttest40.elf COPYONLY)
+configure_file(ttt.sym ttt.sym COPYONLY)
 
 
 install(TARGETS ${EXECUTABLE} DESTINATION bin)
